force-app/main/default/objects/sugati__Credit_Memo__c/sugati__Credit_Memo__c.object-meta.xml
<CustomObject>
    <description>This is a list of credit given back to Clients and Suppliers. No auto calculation at the moment. V2.</description>
    <label>Credit Memo</label>
    <nameField>
        <label>Credit Memo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>