force-app/main/default/objects/sugati__Credit_Memo__c/fields/sugati__CM_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__CM_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>