force-app/main/default/objects/sugati__Credit_Memo__c/fields/sugati__CM_Credit_Memo_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__CM_Credit_Memo_Date__c</fullName>
    <label>Credit Memo Date</label>
    <type>Date</type>
</CustomField>