force-app/main/default/objects/sugati__Credit_Memo__c/fields/sugati__CM_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>sugati__CM_Exchange_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchange Rate</label>
    <referenceTo>sugati__Exchange_Rate__c</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>