force-app/main/default/objects/sugati__Credit_Memo__c/fields/sugati__CM_Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>sugati__CM_Is_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Expired ?</label>
    <type>Checkbox</type>
</CustomField>