force-app/main/default/objects/sugati__Credit_Memo__c/fields/sugati__CM_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__CM_Note__c</fullName>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>