force-app/main/default/objects/sugati__Credit_Memo__c/fields/sugati__CM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__CM_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>