force-app/main/default/objects/sugati__Credit_Memo__c/fields/sugati__CM_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__CM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compensation</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>