force-app/main/default/objects/sugati__Credit_Memo__c/fields/sugati__O_Credit_Expiry_Date_c__c.field-meta.xml
<CustomField>
    <fullName>sugati__O_Credit_Expiry_Date_c__c</fullName>
    <label>Credit Expiry Date</label>
    <type>Date</type>
</CustomField>